adding feature to branch

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <title>Git branching lesson on test</title>
 </head>
 <body>
+  <header>
+    <h1>Git Branching 🌴</h1>
+  </header>
+<main>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error ab aperiam nobis voluptatem minima explicabo, odit vero natus sapiente neque quasi mollitia nesciunt veniam inventore cumque cum quisquam, velit officiis.</p>
+</main>
+
+<footer>
+  <p>by ya boi</p>
+</footer>
 
 </body>
 </html>
